--- a/comparador/bin/.settings/org.eclipse.wst.common.component
+++ b/comparador/bin/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="comparador">
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/"/>
         <property name="context-root" value="comparador"/>
         <property name="java-output-path" value="/comparador/build/classes"/>
     </wb-module>
